Performance fixes for datagrid. Add column alignment.

--- a/wwwroot/scss/data-grid.scss
+++ b/wwwroot/scss/data-grid.scss
@@ -181,11 +181,11 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 .column-selector {
-    top: 2.2rem;
+    top: 1.2rem;
     right: 0;
 
     .giz-checkbox {
