--- a/wwwroot/scss/list.scss
+++ b/wwwroot/scss/list.scss
@@ -2,7 +2,7 @@
 
 .giz-list {
     position: relative;
-    min-width: 15rem;
+    //min-width: 15rem;
     text-align: left;
     //Default Theme
     border-radius: $rounded-theme-dark;
